Fixed overflow

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,4 +16,5 @@ html {
 
 body {
     background-color: #1b1b1b;
+    overflow-x: hidden;
 }
